# RustyClaw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_PASS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  EVALUATION.md  IMPLEMENTATION_STATUS.md  PARITY_PLAN.md  PHILOSOPHY.md  PRIORITIZATION_MATRIX.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_INDEX.md  ROADMAP_SUMMARY.md  SECURITY.md  SPRINT_PLAN.md  STYLE_GUIDE.md  config.example.toml  docker-compose.yml  pr-description.md
crates/memory-tree/: Cargo.toml
crates/memory-tree/src/: chunker.rs  error.rs  indexer.rs  lib.rs  queue.rs  retrieval.rs  score.rs  store.rs  summarizer.rs  trees.rs
crates/rustyclaw-cli/: Cargo.toml
crates/rustyclaw-cli/src/: main.rs
crates/rustyclaw-cli/src/commands/: clawhub.rs  config.rs  gateway.rs  gateway_client.rs  import.rs  mod.rs  refresh_token.rs  shared.rs  status.rs  swarm.rs
crates/rustyclaw-core/: Cargo.toml
crates/rustyclaw-core/src/: args.rs  auto_fetch.rs  client_prefs.rs  commands.rs  config.rs  cron.rs  daemon.rs  error.rs  error_details.rs  genai_bridge.rs  host.rs  lib.rs  load.rs  logging.rs  markdown.rs  memory.rs  memory_consolidation.rs  memory_flush.rs  memory_vault.rs  model_runtime.rs  process_manager.rs  provider_registry.rs  providers.rs  runtime_ctx.rs  sandbox.rs  sessions.rs  skill_audit.rs  skills.rs  soul.rs  steel_memory.rs  steel_memory_indexer.rs  streaming.rs  subconscious.rs  tool_pipeline.rs  ui.rs  user_prompt_types.rs  workspace_context.rs
crates/rustyclaw-core/src/canvas/: a2ui.rs  config.rs  host.rs  mod.rs
crates/rustyclaw-core/src/commands/: mod.rs  subcommands.rs
crates/rustyclaw-core/src/engines/: exo.rs  llamacpp.rs  lmstudio.rs  mod.rs  ollama.rs
crates/rustyclaw-core/src/gateway/: auth.rs  canvas_handler.rs  client.rs  client_types.rs  command_wrapper.rs  concurrent.rs  csrf.rs  errors.rs  health.rs  helpers.rs  mcp_handler.rs  messenger_handler.rs  mod.rs  model_handler.rs  providers.rs  secrets_handler.rs  skills_handler.rs  ssh.rs  ssh_connection.rs  system_prompt.rs  task_handler.rs  thinking_clock.rs  tool_executor.rs  transport.rs  types.rs  webhooks.rs
crates/rustyclaw-core/src/mcp/: client.rs  config.rs  manager.rs  mod.rs  tools.rs
crates/rustyclaw-core/src/messengers/: discord_cli.rs  google_chat.rs  imessage.rs  irc.rs  matrix.rs  matrix_cli.rs  media.rs  mod.rs  signal_cli.rs  slack.rs  slack_cli.rs  streaming.rs  teams.rs  telegram.rs  telegram_cli.rs  whatsapp.rs
crates/rustyclaw-core/src/mnemo/: compaction.rs  config.rs  mod.rs  schema.rs  sqlite_store.rs  summarizer.rs  tests.rs  traits.rs
crates/rustyclaw-core/src/models/: failover.rs  mod.rs  registry.rs
crates/rustyclaw-core/src/observability/: mod.rs
crates/rustyclaw-core/src/pairing/: authorized.rs  client_keys.rs  fingerprint.rs  mod.rs  qr.rs
crates/rustyclaw-core/src/projects/: manager.rs  mod.rs  model.rs
crates/rustyclaw-core/src/protocols/: freshness.rs  mod.rs  receipt.rs
crates/rustyclaw-core/src/providers/: device_flow.rs  genai_backend.rs  mod.rs  models.rs  tests.rs
crates/rustyclaw-core/src/retry/: mod.rs
crates/rustyclaw-core/src/runtime/: docker.rs  mod.rs  ssh.rs
crates/rustyclaw-core/src/sandbox/: mod.rs  platform.rs  tests.rs
crates/rustyclaw-core/src/secrets/: mod.rs  tests.rs  types.rs  vault.rs  vault_ext.rs
crates/rustyclaw-core/src/security/: leak_detector.rs  mod.rs  prompt_guard.rs  safety_layer.rs  ssrf.rs  validator.rs
crates/rustyclaw-core/src/services/: manager.rs  mod.rs  types.rs
crates/rustyclaw-core/src/skills/: clawhub.rs  mod.rs  tests.rs
crates/rustyclaw-core/src/swarm/: config.rs  manager.rs  mod.rs  templates.rs
crates/rustyclaw-core/src/tasks/: display.rs  manager.rs  mod.rs  model.rs  thread.rs
crates/rustyclaw-core/src/threads/: events.rs  manager.rs  mod.rs  model.rs  subtask.rs
crates/rustyclaw-core/src/tools/: agent_setup.rs  ast_grep.rs  browser.rs  cron_tool.rs  definitions.rs  exo_ai.rs  file.rs  gateway_tools.rs  helpers.rs  image_gen.rs  kernel_tools.rs  mcp_tools.rs  memory_tools.rs  mod.rs  model_tools.rs  npm.rs  ollama.rs  params.rs  patch.rs  pdf.rs  (+14 more)
crates/rustyclaw-desktop/: Cargo.toml  Dioxus.toml  build.rs
crates/rustyclaw-desktop/assets/: styles.css
crates/rustyclaw-desktop/icons/: icon.icns
crates/rustyclaw-desktop/src/: app.css  app.rs  app_support.rs  chat_transcript.rs  gateway_client.rs  lib.rs  main.rs  markdown.rs  menu.rs  state.rs
crates/rustyclaw-gateway/: Cargo.toml
crates/rustyclaw-gateway/src/: admin.rs  auth.rs  canvas_handler.rs  chat.rs  cli.rs  command_wrapper.rs  concurrent.rs  dispatch.rs  engine_handler.rs  errors.rs  helpers.rs  kernel_handler.rs  lib.rs  listen.rs  main.rs  mcp_handler.rs  messenger_handler.rs  model_handler.rs  panel_handler.rs  project_handler.rs  secrets_handler.rs  server.rs  service_handler.rs  session.rs  skills_handler.rs  ssh.rs  system_prompt.rs  task_handler.rs  thinking_clock.rs  thread_handler.rs  thread_updates.rs  tool_executor.rs
crates/rustyclaw-onboard/: Cargo.toml
crates/rustyclaw-onboard/src/: lib.rs  messaging.rs  prompts.rs  security.rs  skills.rs
crates/rustyclaw-tui/: Cargo.toml
crates/rustyclaw-tui/src/: _old_tui.rs  _old_tui_palette.rs  action.rs  connection_dialog.rs  gateway_client.rs  lib.rs  main.rs  markdown.rs  onboard.rs  pairing.rs  theme.rs  types.rs
crates/rustyclaw-view/: Cargo.toml
crates/rustyclaw-view/src/: analytics.rs  app_menu.rs  approvals.rs  banner.rs  channels.rs  client.rs  command_menu.rs  command_palette.rs  composer.rs  conversation.rs  cron.rs  dialogs.rs  engines.rs  file_browser.rs  kernel.rs  lib.rs  logs.rs  mcp.rs  media.rs  memory.rs  message.rs  preview.rs  services.rs  sidebar.rs  status.rs  swarm.rs  tabs.rs  tone.rs  tools_config.rs  voice.rs
crates/rustyclaw-view/tests/: integration.rs
crates/rustyclaw-web/: Cargo.toml
crates/rustyclaw-web/src/: lib.rs  transport.rs
crates/tokenjuice/: Cargo.toml
crates/tokenjuice/src/: builtin.rs  classify.rs  compile.rs  lib.rs  overlay.rs  reduce.rs  rule.rs
(+377 files in other folders)
