[workspace]
members = [
    "crates/rustyclaw-core",
    "crates/rustyclaw-cli",
    "crates/rustyclaw-tui",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Erica Stith <erica@example.com>"]
license = "MIT"
homepage = "https://github.com/rexlunae/RustyClaw"
repository = "https://github.com/rexlunae/RustyClaw"
rust-version = "1.85"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("signal"))'] }

# ── Shared dependency versions ───────────────────────────────────────────────
[workspace.dependencies]
# Internal crates
rustyclaw-core = { path = "crates/rustyclaw-core", version = "0.2.0" }
rustyclaw-tui = { path = "crates/rustyclaw-tui", version = "0.2.0" }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Random number generation (for retry jitter)
rand = "0.10"

# Secrets management (encrypted on-disk vault)
securestore = "0.100.0"

# OpenSSL with vendored feature for cross-compilation
openssl-sys = { version = "0.9", features = ["vendored"] }

# TOTP 2FA support
totp-rs = { version = "5.7", features = ["gen_secret", "otpauth"] }

# QR code generation for TOTP enrollment
qrcode = { version = "0.14", default-features = false }

# SSH key generation (Ed25519)
ssh-key = { version = "0.6", features = ["ed25519", "getrandom", "std"] }

# File system and path handling
dirs = "6.0"
shellexpand = "3.1"
directories = "6.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "blocking", "form"], default-features = false }
url = "2.5"
strum = { version = "0.28", features = ["derive"] }
sysinfo = "0.38"
which = "8"
glob = "0.3"
walkdir = "2"

# HTML parsing and text extraction
scraper = { version = "0.25" }
html2md = { version = "0.2" }
urlencoding = "2.1"

# Time handling
chrono = "0.4"
zip = "8.1"

# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Binary serialization for gateway protocol
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Base64 encoding for image data
base64 = "0.22"

# Security validation
regex = "1.10"
ipnetwork = "0.21"

# HTTP date parsing (for Set-Cookie expires)
httpdate = "1.0"

# Terminal styling
colored = "3.1"
indicatif = "0.18"
unicode-width = "0.2"
rpassword = "7"

# TUI dependencies
iocraft = "0.7"
smol = "2"
crossterm = "0.28"

# Matrix messenger support (0.16+ for libsqlite3-sys 0.35 compatibility with wa-rs)
# NOTE: matrix-sdk 0.16 can hit Rust recursion limits on some compilers.
# If you get "queries overflow the depth limit", try: RUSTFLAGS="--cfg recursion_limit=\"512\"" cargo build
# Or disable the matrix feature: cargo build --no-default-features
matrix-sdk = { version = "0.16", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }

# WhatsApp Web support
wa-rs = "0.2"
wa-rs-sqlite-storage = "0.2"
wa-rs-tokio-transport = "0.2"
wa-rs-ureq-http = "0.2"

# Browser automation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# MCP (Model Context Protocol) client support
rmcp = { version = "0.16", features = ["client"] }

# Schema generation for MCP
schemars = "1.0.0-alpha.17"

# Patches for crypto compatibility
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.release]
lto = true
codegen-units = 1
strip = true
