[package]
name = "rustyclaw-core"
description = "Core library for RustyClaw — config, gateway protocol, secrets, tools, and shared types"
readme = "../../README.md"
keywords = ["ai", "agent", "llm", "openclaw", "automation"]
categories = ["development-tools", "text-processing"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["web-tools"]
web-tools = ["dep:scraper", "dep:html2md"]
browser = ["dep:chromiumoxide"]
mcp = ["dep:rmcp", "dep:schemars"]
matrix = ["chat-system/matrix"]
whatsapp = ["chat-system/whatsapp"]
qr = ["dep:image"]
# CLI-based messengers (tier 1) - no heavy deps, just HTTP
signal-cli = ["chat-system/signal-cli"]
all-messengers = ["whatsapp", "signal-cli", "matrix"]
full = ["web-tools", "browser", "mcp", "all-messengers"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
anyhow-tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
chat-system.workspace = true
securestore.workspace = true
openssl-sys.workspace = true
totp-rs.workspace = true
qrcode.workspace = true
ssh-key.workspace = true
dirs.workspace = true
shellexpand.workspace = true
directories.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
url.workspace = true
strum.workspace = true
sysinfo.workspace = true
which.workspace = true
glob.workspace = true
walkdir.workspace = true
urlencoding.workspace = true
pulldown-cmark.workspace = true
chrono.workspace = true
zip.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode.workspace = true
base64.workspace = true
regex.workspace = true
aho-corasick.workspace = true
oxidized-agentic-audit.workspace = true
ipnetwork.workspace = true
uuid.workspace = true
rusqlite.workspace = true
httpdate.workspace = true
colored.workspace = true
indicatif.workspace = true
unicode-width.workspace = true
rpassword.workspace = true

# Optional (browser only)
scraper = { workspace = true, optional = true }
html2md = { workspace = true, optional = true }
chromiumoxide = { workspace = true, optional = true }

# MCP (Model Context Protocol) client support
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

# Steel Memory - semantic vector search memory palace
# Keep git for local/dev; include version so publish can strip git and use crates.io.
steel-memory = { version = "0.1.2" }

# SSH transport (optional)
russh = { version = "0.52.1", features = ["async-trait"] }
russh-keys = { version = "0.49.2" }
rand_core = { version = "0.6.4" }
sha2 = { version = "0.11.0" }

# QR code generation (optional)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
genai = "0.5.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
