[package]
name = "rustyclaw-desktop"
description = "Desktop GUI client for RustyClaw"
keywords = ["ai", "agent", "gui", "desktop", "dioxus"]
categories = ["gui"]
default-run = "rustyclaw-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "rustyclaw-desktop"
path = "src/main.rs"

[dependencies]
# Core library
rustyclaw-core = { path = "../rustyclaw-core", version = "0.3.0", default-features = false }
rustyclaw-view.workspace = true

# Dioxus framework
# Note: "desktop" feature requires GTK dev libraries (libgtk-3-dev on Debian/Ubuntu)
# For webview-based desktop: libwebkit2gtk-4.1-dev plus libxdo-dev (-lxdo at link time)
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-bulma = "0.7.3"
# Chat surface. `default-features = false` drops the `genai` feature (we drive
# the gateway ourselves); `markdown` renders assistant Markdown payloads.
dioxus-genai-chat = { version = "0.2", default-features = false, features = ["markdown"] }

# clap must remain a direct dependency because its derive macros expand to
# `::clap::…` absolute paths that require it in the extern prelude.
clap = { workspace = true }

# Desktop-specific dependencies (not shared with TUI)
futures = "0.3"
tokio-tungstenite = "0.28"
bincode = "2"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
ammonia = "4"
rfd = "0.15"

# Build-time icon generation: render logo.svg into the window icon and the
# bundled icon set (see build.rs). Pure Rust so it works on every platform.
[build-dependencies]
resvg = { version = "0.47", default-features = false }
icns = "0.4"

[features]
default = []
