[package]
name = "rustyclaw-tui"
description = "Terminal UI client for RustyClaw"
keywords = ["ai", "agent", "tui", "terminal"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rustyclaw-core.workspace = true

# TUI framework
iocraft.workspace = true
smol.workspace = true
crossterm.workspace = true

# Also needed directly by TUI code
anyhow.workspace = true
anyhow-tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
clap.workspace = true
tracing.workspace = true
colored.workspace = true
indicatif.workspace = true
unicode-width.workspace = true
rpassword.workspace = true
url.workspace = true
strum.workspace = true
chrono.workspace = true
qrcode.workspace = true
totp-rs.workspace = true
dirs.workspace = true
reqwest.workspace = true
shellexpand.workspace = true
nucleo-matcher.workspace = true


[features]
default = []
ssh = ["rustyclaw-core/ssh", "dep:russh", "dep:russh-keys", "dep:async-trait"]

[dependencies.russh]
version = "0.44"
optional = true

[dependencies.russh-keys]
version = "0.44"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true
