[package]
name = "rustyclaw-tui"
description = "Terminal UI client for RustyClaw"
keywords = ["ai", "agent", "tui", "terminal"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rustyclaw-core.workspace = true
rustyclaw-view.workspace = true

# TUI framework
iocraft.workspace = true
smol.workspace = true

# clap must remain a direct dependency because its derive macros expand to
# `::clap::…` absolute paths that require it in the extern prelude.
clap.workspace = true

# TUI-specific dependencies (not shared with desktop)
anyhow-tracing.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
colored.workspace = true
indicatif.workspace = true
unicode-width.workspace = true
rpassword.workspace = true
strum.workspace = true
totp-rs.workspace = true
reqwest.workspace = true
shellexpand.workspace = true


[features]
default = []

[dependencies.russh]
version = "0.52.1"
features = ["async-trait"]

[dependencies.russh-keys]
version = "0.49.2"

[dependencies.async-trait]
version = "0.1"
