[package]
name = "rustyclaw-view"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared component-oriented view types for RustyClaw clients"

[dependencies]
# Internal
rustyclaw-core.workspace = true

# Shared dependencies consolidated here so clients compile them once
# via rustyclaw-view instead of each pulling them independently.
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
